--- a/package.json
+++ b/package.json
@@ -88,9 +88,11 @@
     "vue": "^2.5.16",
     "vue-class-component": "^6.2.0",
     "vue-template-compiler": "^2.5.16",
-    "vuepress": "^0.13.0"
+    "vuepress": "^0.13.0",
+    "yarn": "^1.10.1"
   },
   "peerDependencies": {
-    "vue-template-compiler": "*"
+    "vue-template-compiler": "*",
+    "vue-runtime-helpers": "0.2.0"
   }
 }
